<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>ele-cloud</groupId>
  <artifactId>security</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>
  
  <name>security</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
		<!-- Common libs -->
		<spring.bom.version>3.2.9.RELEASE</spring.bom.version>
		<javassist_version>3.20.0-GA</javassist_version>
		<netty_version>3.7.0.Final</netty_version>
		<mina_version>1.1.7</mina_version>
		<grizzly_version>2.1.4</grizzly_version>
		<httpclient_version>4.2.1</httpclient_version>
		<hessian_lite_version>3.2.1-fixed-2</hessian_lite_version>
		<xstream_version>1.4.1</xstream_version>
		<fastjson_version>1.1.39</fastjson_version>
		<bsf_version>3.1</bsf_version>
		<sorcerer_version>0.8</sorcerer_version>
		<zookeeper_version>3.4.6</zookeeper_version>
		<zkclient_version>0.1</zkclient_version>
		<curator_version>2.5.0</curator_version>
		<jedis_version>2.1.0</jedis_version>
		<xmemcached_version>1.3.6</xmemcached_version>
		<cxf_version>2.6.1</cxf_version>
		<thrift_version>0.8.0</thrift_version>
		<jfreechart_version>1.0.13</jfreechart_version>
		<hessian_version>4.0.7</hessian_version>
		<servlet_version>3.1.0</servlet_version>
		<jetty_version>6.1.26</jetty_version>
		<validation_version>1.0.0.GA</validation_version>
		<hibernate_validator_version>4.2.0.Final</hibernate_validator_version>
		<jcache_version>0.4</jcache_version>
		<sca_version>2.0-M5.1</sca_version>
		<guice_version>3.0</guice_version>
		<cglib_version>2.2</cglib_version>
		<webx_version>3.0.8</webx_version>
        <jackson_version>2.3.3</jackson_version>
        <commons_pool_version>1.6</commons_pool_version>
        <tomcat_embed_version>8.0.11</tomcat_embed_version>
		<!-- Log libs -->
		<slf4j_version>1.6.2</slf4j_version>
		<jcl_version>1.1</jcl_version>
		<log4j_version>1.2.16</log4j_version>
		<logback_version>1.0.6</logback_version>
		<!-- Test libs -->
		<junit_version>4.10</junit_version>
		<easymock_version>3.0</easymock_version>
		<jmockit_version>0.999.8</jmockit_version>
		<!-- Build args -->
		<!--<argline>-server -Xms64m -Xmx64m -XX:PermSize=64m -XX:MaxPermSize=64m</argline> -->
		<skip_maven_deploy>false</skip_maven_deploy>
		<updateReleaseInfo>true</updateReleaseInfo>
		<project.build.sourceEncoding>${file_encoding}</project.build.sourceEncoding>

		<!-- generate idea copyright -->
		<copyright>Copyright 1999-2012 Alibaba Group.&#10; &#10;Licensed under
			the Apache License, Version 2.0 (the &quot;License&quot;);&#10;you
			may not use this file except in compliance with the License.&#10;You
			may obtain a copy of the License at&#10; &#10;
			http://www.apache.org/licenses/LICENSE-2.0&#10; &#10;Unless required
			by applicable law or agreed to in writing, software&#10;distributed
			under the License is distributed on an &quot;AS IS&quot;
			BASIS,&#10;WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
			express or implied.&#10;See the License for the specific language
			governing permissions and&#10;limitations under the License.</copyright>
		<profile.name>oss</profile.name>

		<!-- for maven compiler plugin -->
		<maven_compiler_plugin_version>2.3.2</maven_compiler_plugin_version>
		<java_source_version>1.6</java_source_version>
		<java_target_version>1.6</java_target_version>
		<file_encoding>UTF-8</file_encoding>

		<maven_source_plugin_version>2.1.1</maven_source_plugin_version>
		<maven_jar_plugin_version>2.3.2</maven_jar_plugin_version>
		<maven_war_plugin_version>2.1.1</maven_war_plugin_version>
		<maven_install_plugin_version>2.3.1</maven_install_plugin_version>
		<maven_deploy_plugin_version>2.7</maven_deploy_plugin_version>

        <maven-surefire-plugin_version>2.17</maven-surefire-plugin_version>
	</properties>
  <dependencies>
	  <dependency>
		  <groupId>junit</groupId>
		  <artifactId>junit</artifactId>
		  <version>4.11</version>
	  </dependency>
	  <dependency>
		  <groupId>ognl</groupId>
		  <artifactId>ognl</artifactId>
		  <version>3.1.7</version>
	  </dependency>
	  <dependency>
		  <groupId>org.mybatis</groupId>
		  <artifactId>mybatis</artifactId>
		  <version>3.4.0</version>
	  </dependency>
	  <dependency>
		  <groupId>org.mybatis</groupId>
		  <artifactId>mybatis-spring</artifactId>
		  <version>1.3.0</version>
	  </dependency>
	  <dependency>
		  <groupId>org.springframework</groupId>
		  <artifactId>spring-jdbc</artifactId>
		  <version>${spring.bom.version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.springframework</groupId>
		  <artifactId>spring-web</artifactId>
		  <version>${spring.bom.version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.springframework</groupId>
		  <artifactId>spring-expression</artifactId>
		  <version>${spring.bom.version}</version>
	  </dependency>



	  <dependency>
		  <groupId>net.sourceforge.stripes</groupId>
		  <artifactId>stripes</artifactId>
		  <version>1.6.0</version>
	  </dependency>
	  <dependency>
		  <groupId>javax.servlet</groupId>
		  <artifactId>jstl</artifactId>
		  <version>1.2</version>
		  <scope>provided</scope>
	  </dependency>
	  <!--     <dependency> -->
	  <!--       <groupId>javax.servlet</groupId> -->
	  <!--       <artifactId>jsp-api</artifactId> -->
	  <!--       <version>2.0</version> -->
	  <!--       <scope>provided</scope> -->
	  <!--     </dependency> -->
	  <dependency>
		  <groupId>log4j</groupId>
		  <artifactId>log4j</artifactId>
		  <version>1.2.17</version>
	  </dependency>
	  <dependency>
		  <groupId>org.hsqldb</groupId>
		  <artifactId>hsqldb</artifactId>
		  <version>2.3.4</version>
	  </dependency>
	  <dependency>
		  <groupId>com.mchange</groupId>
		  <artifactId>mchange-commons-java</artifactId>
		  <version>0.2.6.2</version>
	  </dependency>
	  <dependency>
		  <groupId>mysql</groupId>
		  <artifactId>mysql-connector-java</artifactId>
		  <version>5.1.39</version>
	  </dependency>
	  <dependency>
		  <groupId>c3p0</groupId>
		  <artifactId>c3p0</artifactId>
		  <version>0.9.1.2</version>
	  </dependency>

	  <dependency>
		  <groupId>javax.ws.rs</groupId>
		  <artifactId>javax.ws.rs-api</artifactId>
		  <version>2.0.1</version>
		  <!--          <scope>provided</scope> -->
	  </dependency>

	  <!-- <dependency>
          <groupId>com.sun.jersey.contribs</groupId>
          <artifactId>jersey-spring</artifactId>
          <version>1.19.2</version>
      </dependency> -->
	  <dependency>
		  <groupId>org.glassfish.jersey.ext</groupId>
		  <artifactId>jersey-spring3</artifactId>
		  <version>2.23.2</version>
		  <exclusions>
			  <exclusion>
				  <groupId>org.springframework</groupId>
				  <artifactId>spring-core</artifactId>
			  </exclusion>
			  <exclusion>
				  <groupId>org.springframework</groupId>
				  <artifactId>spring-web</artifactId>
			  </exclusion>
			  <exclusion>
				  <groupId>org.springframework</groupId>
				  <artifactId>spring-beans</artifactId>
			  </exclusion>
		  </exclusions>
	  </dependency>
	  <dependency>
		  <groupId>org.glassfish.jersey.media</groupId>
		  <artifactId>jersey-media-json-jackson</artifactId>
		  <version>2.23.2</version>
	  </dependency>

	  <dependency>
		  <groupId>com.alibaba</groupId>
		  <artifactId>dubbo-demo-api</artifactId>
		  <version>2.8.4</version>
	  </dependency>

	  <dependency>
		  <groupId>com.alibaba</groupId>
		  <artifactId>dubbo</artifactId>
		  <version>2.8.4</version>
	  </dependency>
	  <dependency>
		  <groupId>org.javassist</groupId>
		  <artifactId>javassist</artifactId>
		  <version>${javassist_version}</version>
	  </dependency>
	  <dependency>
		  <groupId>io.netty</groupId>
		  <artifactId>netty</artifactId>
		  <version>${netty_version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.apache.mina</groupId>
		  <artifactId>mina-core</artifactId>
		  <version>${mina_version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.glassfish.grizzly</groupId>
		  <artifactId>grizzly-core</artifactId>
		  <version>${grizzly_version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.apache.httpcomponents</groupId>
		  <artifactId>httpclient</artifactId>
		  <version>${httpclient_version}</version>
	  </dependency>

	  <dependency>
		  <groupId>com.alibaba</groupId>
		  <artifactId>fastjson</artifactId>
		  <version>${fastjson_version}</version>
	  </dependency>
	  <dependency>
		  <groupId>com.thoughtworks.xstream</groupId>
		  <artifactId>xstream</artifactId>
		  <version>${xstream_version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.apache.bsf</groupId>
		  <artifactId>bsf-api</artifactId>
		  <version>${bsf_version}</version>
	  </dependency>

	  <dependency>
		  <groupId>org.apache.zookeeper</groupId>
		  <artifactId>zookeeper</artifactId>
		  <version>${zookeeper_version}</version>
	  </dependency>
	  <dependency>
		  <groupId>com.github.sgroschupf</groupId>
		  <artifactId>zkclient</artifactId>
		  <version>${zkclient_version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.apache.curator</groupId>
		  <artifactId>curator-framework</artifactId>
		  <version>${curator_version}</version>
	  </dependency>
	  <dependency>
		  <groupId>redis.clients</groupId>
		  <artifactId>jedis</artifactId>
		  <version>${jedis_version}</version>
	  </dependency>
	  <dependency>
		  <groupId>com.googlecode.xmemcached</groupId>
		  <artifactId>xmemcached</artifactId>
		  <version>${xmemcached_version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.apache.cxf</groupId>
		  <artifactId>cxf-rt-frontend-simple</artifactId>
		  <version>${cxf_version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.apache.cxf</groupId>
		  <artifactId>cxf-rt-transports-http</artifactId>
		  <version>${cxf_version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.apache.thrift</groupId>
		  <artifactId>libthrift</artifactId>
		  <version>${thrift_version}</version>
	  </dependency>

	  <dependency>
		  <groupId>com.caucho</groupId>
		  <artifactId>hessian</artifactId>
		  <version>${hessian_version}</version>
	  </dependency>
	  <!-- 			<dependency> -->
	  <!-- 				<groupId>javax.servlet</groupId> -->
	  <!-- 				<artifactId>javax.servlet-api</artifactId> -->
	  <!-- 				<version>${servlet_version}</version> -->
	  <!-- 				< <scope>provided</scope> -->
	  <!-- 			</dependency> -->
	  <dependency>
		  <groupId>org.mortbay.jetty</groupId>
		  <artifactId>jetty</artifactId>
		  <exclusions>
			  <exclusion>
				  <groupId>org.mortbay.jetty</groupId>
				  <artifactId>servlet-api</artifactId>
			  </exclusion>
		  </exclusions>
		  <version>${jetty_version}</version>
	  </dependency>
	  <dependency>
		  <groupId>javax.validation</groupId>
		  <artifactId>validation-api</artifactId>
		  <version>${validation_version}</version>
	  </dependency>



	  <!-- Log libs -->


	  <dependency>
		  <groupId>org.apache.logging.log4j</groupId>
		  <artifactId>log4j-api</artifactId>
		  <version>2.7</version>
	  </dependency>
	  <dependency>
		  <groupId>org.apache.logging.log4j</groupId>
		  <artifactId>log4j-core</artifactId>
		  <version>2.7</version>
	  </dependency>

	  <dependency>
		  <groupId>org.slf4j</groupId>
		  <artifactId>slf4j-api</artifactId>
		  <version>${slf4j_version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.slf4j</groupId>
		  <artifactId>slf4j-log4j12</artifactId>
		  <version>${slf4j_version}</version>
	  </dependency>
	  <dependency>
		  <groupId>commons-logging</groupId>
		  <artifactId>commons-logging-api</artifactId>
		  <version>${jcl_version}</version>
	  </dependency>

	  <dependency>
		  <groupId>org.jboss.resteasy</groupId>
		  <artifactId>resteasy-jaxrs</artifactId>
		  <version>3.0.7.Final</version>
	  </dependency>
	  <dependency>
		  <groupId>org.jboss.resteasy</groupId>
		  <artifactId>resteasy-client</artifactId>
		  <version>3.0.7.Final</version>
	  </dependency>
	  <dependency>
		  <groupId>org.jboss.resteasy</groupId>
		  <artifactId>resteasy-netty</artifactId>
		  <version>3.0.7.Final</version>
	  </dependency>
	  <dependency>
		  <groupId>org.jboss.resteasy</groupId>
		  <artifactId>resteasy-jdk-http</artifactId>
		  <version>3.0.7.Final</version>
	  </dependency>
	  <dependency>
		  <groupId>org.jboss.resteasy</groupId>
		  <artifactId>resteasy-jackson-provider</artifactId>
		  <version>3.0.7.Final</version>
	  </dependency>
	  <dependency>
		  <groupId>org.jboss.resteasy</groupId>
		  <artifactId>resteasy-jaxb-provider</artifactId>
		  <version>3.0.7.Final</version>
	  </dependency>
	  <dependency>
		  <groupId>com.esotericsoftware.kryo</groupId>
		  <artifactId>kryo</artifactId>
		  <version>2.24.0</version>
	  </dependency>
	  <dependency>
		  <groupId>de.javakaffee</groupId>
		  <artifactId>kryo-serializers</artifactId>
		  <version>0.26</version>
	  </dependency>
	  <dependency>
		  <groupId>de.ruedigermoeller</groupId>
		  <artifactId>fst</artifactId>
		  <version>1.55</version>
	  </dependency>
	  <dependency>
		  <groupId>org.apache.tomcat.embed</groupId>
		  <artifactId>tomcat-embed-core</artifactId>
		  <version>${tomcat_embed_version}</version>
		  <!--                 <scope>provided</scope> -->
	  </dependency>
	  <dependency>
		  <groupId>org.apache.tomcat.embed</groupId>
		  <artifactId>tomcat-embed-logging-juli</artifactId>
		  <version>${tomcat_embed_version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.hibernate</groupId>
		  <artifactId>hibernate-validator</artifactId>
		  <version>${hibernate_validator_version}</version>
	  </dependency>
	  <dependency>
		  <groupId>javax.cache</groupId>
		  <artifactId>cache-api</artifactId>
		  <version>${jcache_version}</version>
	  </dependency>
	  <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
	  <dependency>
		  <groupId>io.jsonwebtoken</groupId>
		  <artifactId>jjwt</artifactId>
		  <version>0.5</version>
	  </dependency>
	  <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
	  <dependency>
		  <groupId>javax.xml.bind</groupId>
		  <artifactId>jaxb-api</artifactId>
		  <version>2.2.12</version>
	  </dependency>

	  <dependency>
		  <groupId>org.ebaysf.web</groupId>
		  <artifactId>cors-filter</artifactId>
		  <version>1.0.1</version>
	  </dependency>


  </dependencies>
  
<build>   
    <plugins>
            <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<mainClass>ele_cloud.security.SecurityProvider</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>

            <plugin>  
                <groupId>org.apache.maven.plugins</groupId>  
                <artifactId>maven-dependency-plugin</artifactId>  
                <executions>  
                    <execution>  
                        <id>copy</id>  
                        <phase>package</phase>  
                        <goals>  
                            <goal>copy-dependencies</goal>  
                        </goals>  
                        <configuration>  
                            <outputDirectory>  
                                ${project.build.directory}/lib  
                            </outputDirectory>  
                        </configuration>  
                    </execution>  
                </executions>  
            </plugin>
		<!--mybatis自动生成代码配置  -->
		<plugin>
			<groupId>org.mybatis.generator</groupId>
			<artifactId>mybatis-generator-maven-plugin</artifactId>
			<version>1.3.2</version>
			<configuration>
				<configurationFile>src/main/resources/generatorConfig.xml</configurationFile>
				<verbose>true</verbose>
				<overwrite>true</overwrite>
			</configuration>
			<executions>
				<execution>
					<id>Generate MyBatis Artifacts</id>
					<goals>
						<goal>generate</goal>
					</goals>
				</execution>
			</executions>
			<dependencies>
				<dependency>
					<groupId>org.mybatis.generator</groupId>
					<artifactId>mybatis-generator-core</artifactId>
					<version>1.3.2</version>
				</dependency>
			</dependencies>
		</plugin>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<configuration>
				<source>1.7</source>
				<target>1.7</target>
			</configuration>
		</plugin>
	</plugins>
	<resources>
		<resource>
			<directory>src/main/java</directory>
			<includes>
				<include>**/*.xml</include>
			</includes>
			<filtering>true</filtering>
		</resource>
	</resources>
</build>


</project>
